# lexcql-python

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/lexcql/: LexLexer.py  LexParser.py  LexParserListener.py  LexParserVisitor.py  __init__.py  parser.py  validation.py
tests/: conftest.py
tests/regression/: test_regression.py
tests/regression/invalid/: test-001-strings.txt  test-002-search-clause.txt
tests/regression/valid/: test-001-simple-strings.txt  test-002-simple-boolean.txt  test-003-search-clause.txt  test-004-relation-modifier.txt  test-005-complex.txt
tests/validation/: test_validation.py
